--- a/view/index.html
+++ b/view/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body style="background: greenyellow;">
     <h1>Simple APP</h1>
-    <img src="../assets/img/ico/icon.png" alt="logo">
+    <button onclick="this.innerText = 'hello'">world</button>
+    <a onclick="window.open('https://google.com','_self')">click me</a>
+    <br>
+    <img src="assets/img/image.png" width="300px">
 </body>
 </html>
